force-app/main/default/objects/Due_Diligence_Package__c/Due_Diligence_Package__c.object-meta.xml
<CustomObject>
    <description>Tracking the status of Due Diligence Packages prepared for the Divestiture Program.</description>
    <label>Due Diligence Package</label>
    <nameField>
        <label>Due Diligence Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Due Diligence Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>