force-app/main/default/objects/Due_Diligence_Package__c/fields/Checklist_Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Items_Complete__c</fullName>
    <inlineHelpText>Calculates the total number of Checklist items (that are included in the summary) are completed</inlineHelpText>
    <label>Checklist Items Complete</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Exclude_From_Summary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Checklist_Item__c.Document_s_Available_in_eletronic_form__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Due_Diligence_Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>