force-app/main/default/objects/Due_Diligence_Package__c/fields/City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip__c</fullName>
    <formula>Divestiture_Site__r.City__c  &amp; &quot;, &quot;  &amp;  Divestiture_Site__r.State__c  &amp; &quot; &quot;  &amp;  Divestiture_Site__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City, State, Zip</label>
    <type>Text</type>
</CustomField>