force-app/main/default/objects/Due_Diligence_Package__c/fields/Confidentiality_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Letter_Sent__c</fullName>
    <label>Confidentiality Letter Sent</label>
    <type>Date</type>
</CustomField>