force-app/main/default/objects/Due_Diligence_Package__c/fields/Confidentiality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Notes__c</fullName>
    <label>Confidentiality Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>