force-app/main/default/objects/Due_Diligence_Package__c/fields/Confidentiality_Status_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Status_End_Date__c</fullName>
    <inlineHelpText>auto-populated when package status leaves confidentiality</inlineHelpText>
    <label>Confidentiality Status End Date</label>
    <type>Date</type>
</CustomField>