force-app/main/default/objects/Due_Diligence_Package__c/fields/Confidentiality_Status_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Status_Start_Date__c</fullName>
    <inlineHelpText>Indicates when package started in this status.</inlineHelpText>
    <label>Confidentiality Status Start Date</label>
    <type>Date</type>
</CustomField>