force-app/main/default/objects/Due_Diligence_Package__c/fields/Confidentiality_Waived__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Waived__c</fullName>
    <label>Confidentiality Waived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>