force-app/main/default/objects/Due_Diligence_Package__c/fields/Data_Export_Reports__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to prepare the reports needed to export the data for the checklist.</inlineHelpText>
    <label>Data Export Reports</label>
    <type>Checkbox</type>
</CustomField>