force-app/main/default/objects/Due_Diligence_Package__c/fields/Date_Due_Diligence_Package_PO__c.field-meta.xml
<CustomField>
    <fullName>Date_Due_Diligence_Package_PO__c</fullName>
    <label>Date Due Diligence Package PO#</label>
    <type>Date</type>
</CustomField>