force-app/main/default/objects/Due_Diligence_Package__c/fields/Date_Follow_up_Waiver_of_Conf_Req_PO_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Follow_up_Waiver_of_Conf_Req_PO_2__c</fullName>
    <label>Date Follow-up Waiver of Conf Req PO#2</label>
    <type>Date</type>
</CustomField>