force-app/main/default/objects/Due_Diligence_Package__c/fields/Date_Milestone_Complete_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Milestone_Complete_Review_Complete__c</fullName>
    <label>Date Milestone Complete/Review Complete</label>
    <type>Date</type>
</CustomField>