force-app/main/default/objects/Due_Diligence_Package__c/fields/Date_Moved_to_Staging_Folder__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Staging_Folder__c</fullName>
    <label>Date Moved to Staging Folder</label>
    <type>Date</type>
</CustomField>