force-app/main/default/objects/Due_Diligence_Package__c/fields/Date_Waiver_of_Conf_Request_PO__c.field-meta.xml
<CustomField>
    <fullName>Date_Waiver_of_Conf_Request_PO__c</fullName>
    <label>Date Waiver of Conf Request PO#</label>
    <type>Date</type>
</CustomField>