force-app/main/default/objects/Due_Diligence_Package__c/fields/Deccom_Notice_Signed__c.field-meta.xml
<CustomField>
    <fullName>Deccom_Notice_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decom Notice Signed?</label>
    <type>Checkbox</type>
</CustomField>