force-app/main/default/objects/Due_Diligence_Package__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Due Dillegence Packages</relationshipLabel>
    <relationshipName>Due_Dillegence_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>