force-app/main/default/objects/Due_Diligence_Package__c/fields/Due_Diligence_Package_PO__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Package_PO__c</fullName>
    <inlineHelpText>Track PO&apos;s per due diligence package</inlineHelpText>
    <label>Due Diligence Package PO#</label>
    <length>32</length>
    <type>Text</type>
</CustomField>