force-app/main/default/objects/Due_Diligence_Package__c/fields/Due_Diligence_Task_Complete__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Task_Complete__c</fullName>
    <inlineHelpText>T-Mobile Team will enter the date when the DD Package is complete.  Moves status to Closed.</inlineHelpText>
    <label>Due Diligence Task Complete</label>
    <type>Date</type>
</CustomField>