force-app/main/default/objects/Due_Diligence_Package__c/fields/Excel_PDF_Template_Link__c.field-meta.xml
<CustomField>
    <fullName>Excel_PDF_Template_Link__c</fullName>
    <formula>Hyperlink(&quot;https://na59.salesforce.com/sfc/p/f40000001xI1/a/f4000000tTvc/3FcS5sKi49085wlSRVDXKRx55MubrBMLH2yaGddPCWk&quot;, &quot;Click to open &amp; Download&quot;)</formula>
    <inlineHelpText>click the link to open the most recent Excel template and update with report information. After updates, save as PDF.</inlineHelpText>
    <label>Excel PDF Template Link</label>
    <type>Text</type>
</CustomField>