force-app/main/default/objects/Due_Diligence_Package__c/fields/Follow_up_Waiver_of_Conf_Request_PO_1__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Waiver_of_Conf_Request_PO_1__c</fullName>
    <label>Follow-up Waiver of Conf Request PO#1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>