force-app/main/default/objects/Due_Diligence_Package__c/fields/Forced_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Forced_Relocation__c</fullName>
    <formula>Divestiture_Site__r.Forced_Relocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forced Relocation</label>
    <type>Checkbox</type>
</CustomField>