force-app/main/default/objects/Due_Diligence_Package__c/fields/Forced_Removal_Code__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal_Code__c</fullName>
    <formula>Divestiture_Site__r.Forced_Relocation_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forced Removal Code</label>
    <type>Text</type>
</CustomField>