force-app/main/default/objects/Due_Diligence_Package__c/fields/In_Progress_End_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_End_Date__c</fullName>
    <inlineHelpText>Auto-populates when package status leaves in progress</inlineHelpText>
    <label>In Progress End Date</label>
    <type>Date</type>
</CustomField>