force-app/main/default/objects/Due_Diligence_Package__c/fields/In_Progress_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Start_Date__c</fullName>
    <inlineHelpText>auto-populated when status is moved to in progress</inlineHelpText>
    <label>In Progress Start Date</label>
    <type>Date</type>
</CustomField>