force-app/main/default/objects/Due_Diligence_Package__c/fields/In_QC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>In_QC_End_Date__c</fullName>
    <inlineHelpText>Auto populates when moved out of this status</inlineHelpText>
    <label>In QC End Date</label>
    <type>Date</type>
</CustomField>