force-app/main/default/objects/Due_Diligence_Package__c/fields/In_QC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>In_QC_Start_Date__c</fullName>
    <inlineHelpText>Auto populates when status moved to in qc</inlineHelpText>
    <label>In QC Start Date</label>
    <type>Date</type>
</CustomField>