force-app/main/default/objects/Due_Diligence_Package__c/fields/Is_a_Confidentiality_Letter_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Confidentiality_Letter_to_Landlord__c</fullName>
    <label>Confidentiality Letter Required?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>