force-app/main/default/objects/Due_Diligence_Package__c/fields/Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity__c</fullName>
    <formula>Divestiture_Site__r.Landlord_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Autofilled from the Divestiture Site Record</inlineHelpText>
    <label>Landlord Entity</label>
    <type>Text</type>
</CustomField>