force-app/main/default/objects/Due_Diligence_Package__c/fields/Landlord_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Normalized__c</fullName>
    <formula>Divestiture_Site__r.Landlord_Normalized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord (Normalized)1</label>
    <type>Text</type>
</CustomField>