force-app/main/default/objects/Due_Diligence_Package__c/fields/Landlord_Notes__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Notes__c</fullName>
    <label>Landlord Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>