force-app/main/default/objects/Due_Diligence_Package__c/fields/Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long__c</fullName>
    <formula>TEXT(  Divestiture_Site__r.Lat_Long__Latitude__s  ) &amp; &quot;/&quot;  &amp;  TEXT( Divestiture_Site__r.Lat_Long__Longitude__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lat/Long</label>
    <type>Text</type>
</CustomField>