force-app/main/default/objects/Due_Diligence_Package__c/fields/Lease_in_Holdover__c.field-meta.xml
<CustomField>
    <fullName>Lease_in_Holdover__c</fullName>
    <label>Lease in Holdover</label>
    <length>100</length>
    <type>Text</type>
</CustomField>