force-app/main/default/objects/Due_Diligence_Package__c/fields/Lease_Only__c.field-meta.xml
<CustomField>
    <fullName>Lease_Only__c</fullName>
    <formula>Divestiture_Site__r.Lease_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Only</label>
    <type>Checkbox</type>
</CustomField>