force-app/main/default/objects/Due_Diligence_Package__c/fields/Milestone_Review_Complete_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Review_Complete_End_Date__c</fullName>
    <inlineHelpText>Auto populates when moved out of this stage</inlineHelpText>
    <label>Milestone/Review Complete End Date</label>
    <type>Date</type>
</CustomField>