force-app/main/default/objects/Due_Diligence_Package__c/fields/Milestone_Review_Complete_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Review_Complete_Start_Date__c</fullName>
    <inlineHelpText>Auto populates when status changes to this one</inlineHelpText>
    <label>Milestone/Review Complete Start Date</label>
    <type>Date</type>
</CustomField>