force-app/main/default/objects/Due_Diligence_Package__c/fields/Moved_to_Staging_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Staging_End_Date__c</fullName>
    <inlineHelpText>Auto populates when moved out of staging status</inlineHelpText>
    <label>Moved to Staging End Date</label>
    <type>Date</type>
</CustomField>