force-app/main/default/objects/Due_Diligence_Package__c/fields/Moved_to_Staging_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Staging_Start_Date__c</fullName>
    <inlineHelpText>auto populates when moved to this status</inlineHelpText>
    <label>Moved to Staging Start Date</label>
    <type>Date</type>
</CustomField>