force-app/main/default/objects/Due_Diligence_Package__c/fields/NNR_Comments__c.field-meta.xml
<CustomField>
    <fullName>NNR_Comments__c</fullName>
    <inlineHelpText>If NNR Sent field has comments enter them here.</inlineHelpText>
    <label>NNR Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>