force-app/main/default/objects/Due_Diligence_Package__c/fields/NNR_Sent_180_days_remaining__c.field-meta.xml
<CustomField>
    <fullName>NNR_Sent_180_days_remaining__c</fullName>
    <label>NNR Sent, &lt;180 days remaining?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>See Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>