force-app/main/default/objects/Due_Diligence_Package__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Landlord (Normalized)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Tower</fullName>
            </value>
            <value>
                <fullName>Crown Castle</fullName>
            </value>
            <value>
                <fullName>Non-MLA</fullName>
            </value>
            <value>
                <fullName>Other Company</fullName>
            </value>
            <value>
                <fullName>Other MLA</fullName>
            </value>
            <value>
                <fullName>SBA</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Vertical Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>