force-app/main/default/objects/Due_Diligence_Package__c/fields/Notes_B_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_B_1_Comments__c</fullName>
    <inlineHelpText>Enter notes about the lease and B-1 comments section here.</inlineHelpText>
    <label>Notes/B-1 Comments</label>
    <type>TextArea</type>
</CustomField>