force-app/main/default/objects/Due_Diligence_Package__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <inlineHelpText>Notes from the Due Diligence weekly spreadsheet.</inlineHelpText>
    <label>Notes/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>