force-app/main/default/objects/Due_Diligence_Package__c/fields/Notice_of_Decom_NOD__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decom_NOD__c</fullName>
    <formula>Divestiture_Site__r.Notice_of_Decom_NOD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Decommision Date that has been shared with Dish.  This Date is locked when Dish is notified.</inlineHelpText>
    <label>Notice of Decom (NOD)</label>
    <type>Date</type>
</CustomField>