force-app/main/default/objects/Due_Diligence_Package__c/fields/Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_Status__c</fullName>
    <label>Package Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Assingment</fullName>
                <label>Awaiting Assignment</label>
            </value>
            <value>
                <fullName>Confidentialty Letter Required</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Ready For QC</fullName>
            </value>
            <value>
                <fullName>In QC</fullName>
            </value>
            <value>
                <fullName>Moved to Staging Folder</fullName>
            </value>
            <value>
                <fullName>Milestone_Complete</fullName>
                <label>Milestone Complete/Review Complete</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>