force-app/main/default/objects/Due_Diligence_Package__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <inlineHelpText>Used to track Vendor PO information</inlineHelpText>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>