force-app/main/default/objects/Due_Diligence_Package__c/fields/Priority_Group__c.field-meta.xml
<CustomField>
    <fullName>Priority_Group__c</fullName>
    <formula>Divestiture_Site__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Priority from the Divestiture Site.</inlineHelpText>
    <label>Priority Group</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>