force-app/main/default/objects/Due_Diligence_Package__c/fields/QC_Completed_and_Approved__c.field-meta.xml
<CustomField>
    <fullName>QC_Completed_and_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by person completing and approving Quality Control check.</inlineHelpText>
    <label>QC Completed and Approved</label>
    <type>Checkbox</type>
</CustomField>