force-app/main/default/objects/Due_Diligence_Package__c/fields/Quality_Check_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Check Completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Due_Dillegence_Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>