force-app/main/default/objects/Due_Diligence_Package__c/fields/Ready_for_QC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QC_End_Date__c</fullName>
    <inlineHelpText>Auto-populated when status leaves ready for qc</inlineHelpText>
    <label>Ready for QC End Date</label>
    <type>Date</type>
</CustomField>