force-app/main/default/objects/Due_Diligence_Package__c/fields/Ready_for_QC_start__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QC_start__c</fullName>
    <inlineHelpText>auto-populates when status moved to ready for qc</inlineHelpText>
    <label>Ready for QC Start Date</label>
    <type>Date</type>
</CustomField>