force-app/main/default/objects/Due_Diligence_Package__c/fields/RF_Shutdown_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date__c</fullName>
    <formula>Divestiture_Site__r.Forecasted_Logical_Decommission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Also referred to as the Forecasted Logical Decommsion Date</inlineHelpText>
    <label>RF Shutdown Forecast Date</label>
    <type>Date</type>
</CustomField>