force-app/main/default/objects/Due_Diligence_Package__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <inlineHelpText>Clearwire sites have Clearwire ID added to the site name.</inlineHelpText>
    <label>Site Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>