force-app/main/default/objects/Due_Diligence_Package__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <formula>Divestiture_Site__r.Structure_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Type</label>
    <type>Text</type>
</CustomField>