force-app/main/default/objects/Due_Diligence_Package__c/fields/Sprint_S_Tmobile_T__c.field-meta.xml
<CustomField>
    <fullName>Sprint_S_Tmobile_T__c</fullName>
    <formula>Divestiture_Site__r.Sprint_S_Tmobile_T__c</formula>
    <inlineHelpText>Populated from Divest information- not editable.</inlineHelpText>
    <label>Sprint (S) / Tmobile (T)</label>
    <type>Text</type>
</CustomField>