force-app/main/default/objects/Due_Diligence_Package__c/fields/Total_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Checklist_Items__c</fullName>
    <label>Total Checklist Items</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Exclude_From_Summary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Due_Diligence_Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>