force-app/main/default/objects/Due_Diligence_Package__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vendor the package has been assigned to.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Dillegence Packages</relationshipLabel>
    <relationshipName>Due_Dillegence_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>