force-app/main/default/objects/Due_Diligence_Package__c/fields/Vendor_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Assigned_Date__c</fullName>
    <description>Used to track when Vendor is assigned</description>
    <inlineHelpText>Used to track when Vendor is assigned</inlineHelpText>
    <label>Vendor Assigned Date</label>
    <type>Date</type>
</CustomField>