force-app/main/default/objects/Due_Diligence_Package__c/fields/Vendor_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Hidden__c</fullName>
    <inlineHelpText>Used to set sharing rules.  Auto updated from a process when Vendor is updated.</inlineHelpText>
    <label>Vendor (Hidden)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>