force-app/main/default/objects/Due_Diligence_Package__c/fields/Vendor_POs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_POs__c</fullName>
    <inlineHelpText>Used to track Vendor po&apos;s, updated by Due Diligence team</inlineHelpText>
    <label>Vendor POs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>