force-app/main/default/objects/Due_Diligence_Package__c/fields/Waiver_of_Conf_Request_PO__c.field-meta.xml
<CustomField>
    <fullName>Waiver_of_Conf_Request_PO__c</fullName>
    <label>Waiver of Conf Request PO#</label>
    <length>32</length>
    <type>Text</type>
</CustomField>