force-app/main/default/objects/Due_Diligence_Package__c/fields/X180_days_Comments__c.field-meta.xml
<CustomField>
    <fullName>X180_days_Comments__c</fullName>
    <inlineHelpText>if the field &lt;180 days remaining requires a comment enter it here.</inlineHelpText>
    <label>&lt;180 days Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>