force-app/main/default/objects/Due_Diligence_Package__c/fields/X180_days_remaining__c.field-meta.xml
<CustomField>
    <fullName>X180_days_remaining__c</fullName>
    <label>&lt;180 days remaining?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Enter Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>