force-app/main/default/objects/Due_Diligence_Package__c/fields/X1st_Incremental_Confidentiality_Letter__c.field-meta.xml
<CustomField>
    <fullName>X1st_Incremental_Confidentiality_Letter__c</fullName>
    <label>1st Incremental Confidentiality Letter</label>
    <type>Date</type>
</CustomField>