force-app/main/default/objects/Due_Diligence_Package__c/fields/X240_Day_Flag__c.field-meta.xml
<CustomField>
    <fullName>X240_Day_Flag__c</fullName>
    <formula>IF( AND(X240_Days_before_Physical_Decom_Forcast__c  &lt;=  TODAY(),
X240_Days_before_Physical_Decom_Forcast__c - 60   &gt;=  TODAY()),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lock date aprroaching - 60 Days or less.</inlineHelpText>
    <label>&lt;240 Day Flag to Decom Lock Date</label>
    <type>Checkbox</type>
</CustomField>