force-app/main/default/objects/Due_Diligence_Package__c/fields/X240_DAy_Flag_to_RF_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>X240_DAy_Flag_to_RF_Lock_Date__c</fullName>
    <formula>IF( AND(Divestiture_Site__r.X180_days_RF_Shutdown_Notice__c + 60  &lt;= TODAY(),
 Divestiture_Site__r.X180_days_RF_Shutdown_Notice__c   &gt;=  TODAY()),
TRUE, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RFShutdown Lockdate approaching - 60 days or less.</inlineHelpText>
    <label>240 Day Flag to RF Lock Date</label>
    <type>Checkbox</type>
</CustomField>