force-app/main/default/objects/Due_Diligence_Package__c/fields/X240_Days_before_Physical_Decom_Forcast__c.field-meta.xml
<CustomField>
    <fullName>X240_Days_before_Physical_Decom_Forcast__c</fullName>
    <formula>Divestiture_Site__r.Physical_Decommsion_Date_from_Source_Sys__c - 240</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates 240 days before the forecasted Physical Decommsion date from source systems to flag packages that are 60 days out from the Notice of Decommsion.</inlineHelpText>
    <label>60 Days to Forecasted Lock Date</label>
    <type>Date</type>
</CustomField>