force-app/main/default/objects/Due_Diligence_Package__c/fields/X2nd_Incremental_Confidentiality_Letter__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Incremental_Confidentiality_Letter__c</fullName>
    <label>2nd Incremental Confidentiality Letter</label>
    <type>Date</type>
</CustomField>