force-app/main/default/objects/Due_Diligence_Package__c/fields/X5_Minute_Delay_2__c.field-meta.xml
<CustomField>
    <fullName>X5_Minute_Delay_2__c</fullName>
    <label>5 Minute Delay 2</label>
    <type>DateTime</type>
</CustomField>