force-app/main/default/objects/Due_Diligence_Package__c/fields/X5_Minute_Delay__c.field-meta.xml
<CustomField>
    <fullName>X5_Minute_Delay__c</fullName>
    <formula>Now() - 55 * (1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Minute Delay</label>
    <type>DateTime</type>
</CustomField>