force-app/main/default/objects/Due_Diligence_Package__c/validationRules/Vendors_Cannot_Complete_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendors_Cannot_Complete_Milestone</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Package_Status__c ),
TEXT(Package_Status__c)  = &quot;Milestone Complete/Review Complete&quot;,  
$Profile.Name = &quot;Divest Due Diligence&quot;)</errorConditionFormula>
    <errorMessage>Changes to Milestones Complete must be done by a member of the T-Mobile Team.</errorMessage>
</ValidationRule>